# Saffin.exe

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  PR_BODY.md  README.md  app.py  dev-requirements.txt  idea_vault.md  launch_ui.bat  pyproject.toml  requirements.txt  saffin.bat  setup.bat
.github/workflows/: ci-mocked-embeddings.yml  ci.yml  release.yml
docs/: ASSISTANT.md
journal/: journal.csv
scripts/: assistant.py  create_desktop_shortcut.ps1  create_sfx_installer.ps1  decision_score.py  docker_run.ps1  installer_windows.ps1  package_installer.ps1  rag.py  run_embedding_demo.ps1  run_embedding_demo.sh  saffin.py  schedule_reminder.ps1  send_reminder.ps1  start_saffin.bat  start_saffin.ps1  streaks.py  uninstall_shortcuts.ps1
tests/: test_assistant.py  test_decision_score.py  test_rag.py  test_saffin.py  test_score_flow.py  test_streaks.py
weekly_reviews/: 2026-06-07.md  TEMPLATE.md
